unpackaged/main/default/objects/BLND_DFTT_Folder__c/fields/BLND_Flag4__c.field-meta.xml
<CustomField>
	<fullName>BLND_Flag4__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Flag4</label>
	<type>Checkbox</type>
</CustomField>