unpackaged/main/default/objects/BLND_DFTT_Folder__c/fields/BLND_Folder_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Folder_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Folder Link</label>
	<referenceTo>BLND_DFTT_Folder__c</referenceTo>
	<relationshipLabel>TableTop Folders</relationshipLabel>
	<relationshipName>R00N30000002PYiWEAW</relationshipName>
	<type>Lookup</type>
</CustomField>